fix: keep readable source order for job listing apply now button
The source order of the apply now button on the job listing page was
changing at an in-between breakpoint, by setting its CSS grid area,
which was not ideal for screen reader users (per feedback). This adds an
additional button in the correct source order when it's displayed at the
end rather than the start, and the two buttons are shown or hidden at
the different breakpoints.

--- a/styles/global-blocks.css
+++ b/styles/global-blocks.css
@@ -249,16 +249,34 @@
     flex-direction: column;
   }
 
-  .button {
+  .listing-details__button {
     grid-area: button;
 
-    @media (min-width: 36rem) {
-      align-self: start;
-      width: auto;
+    &.listing-details__button--first {
+      display: inline-flex;
+
+      @media (min-width: 36rem) {
+        display: none;
+      }
+
+      @media (min-width: 67.5rem) {
+        display: inline-flex;
+        margin-block-end: 3rem;
+      }
     }
 
-    @media (min-width: 67.5rem) {
-      margin-block-end: 3rem;
+    &.listing-details__button--last {
+      display: none;
+
+      @media (min-width: 36rem) {
+        display: inline-flex;
+        align-self: start;
+        width: auto;
+      }
+
+      @media (min-width: 67.5rem) {
+        display: none;
+      }
     }
   }
 }
